Fix running tests with poetry

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ requires =
     poetry
 
 [testenv]
+basepython = python3.12
 allowlist_externals = poetry
 skip_install = true
 no_package = true
@@ -12,18 +13,18 @@ no_package = true
 commands_pre =
     poetry install --only=main --extras=test
 commands =
-    pytest \
+    poetry run pytest \
         --cov-reset \
         --cov-config=.coveragerc \
-        --cov=waiverdb \
+        --cov=. \
         --cov-report=term \
         --cov-report=xml \
         --cov-report=html \
+        --junit-xml=report.xml \
         --ignore=functional-tests \
         {posargs}
 
 [testenv:functional]
-skip_install = true
 commands_pre =
     poetry install --only=main --extras=test --extras=functional-test
 setenv =
@@ -35,9 +36,17 @@ allowlist_externals =
     docker/healthcheck.sh
 commands =
     docker/healthcheck.sh
-    pytest \
+    poetry run pytest \
+        --cov-reset \
+        --cov-config=.coveragerc \
+        --cov=. \
+        --cov-report=term \
+        --cov-report=xml \
+        --cov-report=html \
+        --junit-xml=report.xml \
         --driver=Firefox \
         functional-tests/ \
+        tests/ \
         {posargs}
 
 [testenv:bandit]
