--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     healthcheck: &dev-healthcheck
       test: >-
         /code/docker/docker-entrypoint.sh python -c 'import requests;
-        requests.get("http://127.0.0.1:8080/health/live").raise_for_status();
+        requests.get("http://127.0.0.1:8080").raise_for_status();
         requests.get("http://127.0.0.1:5004/healthcheck").raise_for_status();
         '
       interval: 1s
@@ -43,11 +43,10 @@ services:
       - 127.0.0.1:5004:5004
       - 127.0.0.1:8080:8080
     environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_BOOTSTRAP_ADMIN_USERNAME=admin
+      - KC_BOOTSTRAP_ADMIN_PASSWORD=admin
     command:
       - start-dev
-      - --health-enabled=true
       - --import-realm
     volumes:
       - ./docker/keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json:ro,z
