--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       waiverdb-db:
         condition: service_healthy
       keycloak:
-        condition: service_healthy
+        condition: service_started
     network_mode: service:keycloak
     healthcheck: &dev-healthcheck
       test: >-
