--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,9 +40,8 @@ python = ">=3.12,<3.14"
 
 # https://github.com/lepture/authlib/pull/662
 # fix authlib to use correct auth method for token introspection
-# fixes submitting waivers with Bodhi. remove this when there is
-# a fixed stable authlib release
-authlib = {git = "https://github.com/AdamWill/authlib.git", branch = "oauth2-fix-introspect-endpoint"}
+# fixes submitting waivers with Bodhi.
+authlib = "^1.5.0"
 
 flask = "^3.1.0"
 flask-oidc = "^2.2.2"
