Avoid updating Python version
JIRA: RHELWF-13488

--- a/renovate.json
+++ b/renovate.json
@@ -20,6 +20,10 @@
       "groupName": "all dependencies",
       "automerge": true,
       "platformAutomerge": true
+    },
+    {
+      "matchDepTypes": ["requires-python"],
+      "enabled": false
     }
   ],
   "constraints": {
