Tell Renovate/MintMaker to update lock file
JIRA: RHELWF-13488

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
     ":disableDependencyDashboard",
     "schedule:weekly"
   ],
+  "lockFileMaintenance": {"enabled": true},
   "packageRules": [
     {
       "description": "Patch and digest updates",
