--- a/.github/workflows/gating.yaml
+++ b/.github/workflows/gating.yaml
@@ -92,14 +92,12 @@ jobs:
           ignore: DL3041
           failure-threshold: warning
 
-  image-build:
-    name: Container Image Build
+  functional-tests:
+    name: Functional Tests
     needs: hadolint
     runs-on: ubuntu-latest
     env:
       IMAGE_NAME: waiverdb
-      REGISTRY: quay.io/factory2
-      GH_REGISTRY: ghcr.io/${{ github.actor }}
 
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
@@ -123,45 +121,19 @@ jobs:
             libldap2-dev
             libsasl2-dev
 
-      - name: Update the Application Version
-        run: |
-          NEW_VERSION="$(./get-version.sh)"
-          uv version "$NEW_VERSION"
-
-      - name: Get image tag from git branch
-        run: |
-          export TAG=$(sed 's/[^0-9a-zA-Z_.-]/__/g' <<< "$GITHUB_REF_NAME") &&
-          echo "VERSION_TAG=$TAG" >> $GITHUB_ENV
-
       - name: Build Image
         id: build-image
         uses: redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2
         with:
           image: ${{ env.IMAGE_NAME }}
           tags: >-
-            ${{ env.VERSION_TAG }}
             ${{ github.ref == 'refs/heads/master' && 'latest' || '' }}
             ${{ github.sha }}
           containerfiles: Dockerfile
           build-args: |
-            GITHUB_SHA=${{ github.sha }}
+            SHORT_COMMIT=${{ github.sha }}
+            COMMIT_TIMESTAMP=1
             EXPIRES_AFTER=${{ github.ref == 'refs/heads/master' && 'never' || '30d' }}
-
-      - name: Log in to the image registry
-        if: github.event_name == 'push' && github.actor != 'dependabot[bot]'
-        uses: redhat-actions/podman-login@4934294ad0449894bcd1e9f191899d7292469603 # v1
-        with:
-          registry: ${{ secrets.REGISTRY_USER && env.REGISTRY || env.GH_REGISTRY }}
-          username: ${{ secrets.REGISTRY_USER || github.actor }}
-          password: ${{ secrets.REGISTRY_PASSWORD || secrets.GITHUB_TOKEN }}
-
-      - name: Push Image
-        if: github.event_name == 'push' && github.actor != 'dependabot[bot]'
-        uses: redhat-actions/push-to-registry@5ed88d269cf581ea9ef6dd6806d01562096bee9c # v2
-        with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
-          registry: ${{ secrets.REGISTRY_USER && env.REGISTRY || env.GH_REGISTRY }}
 
       - name: Install Chromium for functional tests
         run: |
